Make compatible with Java 1.4.